--- a/html/cheddar-gorge.html
+++ b/html/cheddar-gorge.html
@@ -16,7 +16,9 @@
 	<!--Favicon 32x32-->
 	<link rel="icon" type="image/png" sizes="32x32" href="..assets/images/favicon-32x32.png">
 	<!--Favicon 16x16-->
-	<link href="https://raw.githubusercontent.com/michodgs24/Somerset-Trails/master/assets/css/images/favicon/favicon-16x16.png" rel="#">
+	<link
+		href="https://raw.githubusercontent.com/michodgs24/Somerset-Trails/master/assets/css/images/favicon/favicon-16x16.png"
+		rel="#">
 </head>
 
 <body data-spy="scroll" data-target="#navbar-scrollspy" data-offset="0">
@@ -24,7 +26,7 @@
 	<!--Navigation, fixed at the top of page for ease of use.-->
 
 	<header>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light fixed top">
 
 			<!--logo part of menu bar, for better site layout-->
 
@@ -37,12 +39,12 @@
 				<ul class="navbar-nav">
 					<li class="nav-item active">
 
-                    <!--homepage tab, for user accessibility-->
+						<!--homepage tab, for user accessibility-->
 
 						<a class="nav-link" href="index.html">Somerset Trails<span class="sr-only">(current)</span></a>
 					</li>
 
-                    <!--Dropdown tab, all trails in one place for user accessibility-->
+					<!--Dropdown tab, all trails in one place for user accessibility-->
 
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -63,6 +65,54 @@
 	<section>
 		<div>
 			<h2>Cheddar Gorge Gallery</h2>
+            	<section class="slide">
+		<br>
+		<h2 class="w3-center">Cheddar Gorge Gallery</h2>
+		<br>
+		<div>
+			<div class="w3-content w3-display-container">
+				<img class="card" src="" alt="Cheddar Gorge">
+				<div class="w3-display-bottomleft w3-container w3-padding-10 w3-white">
+				</div>
+			</div>
+		</div>
+
+		<div>
+			<div class="w3-content w3-display-container">
+				<img class="card" src="https://upload.wikimedia.org/wikipedia/commons/2/22/Cheddar_Gorge%2C_Somerset%2C_UK_-_Diliff.jpg" alt="Cheddar Gorge">
+				<div class="w3-display-bottomleft w3-container w3-padding-10 w3-white">
+					Cheddar Gorge
+				</div>
+			</div>
+		</div>
+
+		<div>
+			<div class="w3-content w3-display-container">
+				<img class="card" src="" alt="Cheddar Gorge">
+				<div class="w3-display-bottomleft w3-container w3-padding-10 w3-white">
+				</div>
+			</div>
+		</div>
+
+		<div>
+			<div class="w3-content w3-display-container">
+				<img class="card" src="" alt="">
+				<div class="w3-display-bottomleft w3-container w3-padding-10 w3-white">
+				</div>
+			</div>
+		</div>
+
+		<div>
+			<div class="w3-content w3-display-container">
+				<img class="card" src="" alt="Cheddar Gorge">
+				<div class="w3-display-bottomleft w3-container w3-padding-10 w3-white">
+				</div>
+			</div>
+		</div>
+		<br>
+		<div class="w3-center">
+			<button class="w3-button" onclick="plusDivs(-1)">&#10094; Prev</button>
+			<button class="w3-button" onclick="plusDivs(1)">Next &#10095;</button>
 		</div>
 	</section>
 
@@ -76,6 +126,17 @@
 	</section>-->
 
 	<footer>
+		<div>
+			<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
+			<h5 href="index.html">Somerset Trails</h5>
+		</div>
+		<div>
+			<h5>Social Media</h5>
+		</div>
+		<link>
+		</link>
+		<link>
+		</link>
 	</footer>
 
 	<script>
