--- a/somerset-coastal.html
+++ b/somerset-coastal.html
@@ -23,45 +23,50 @@
 
 <body data-spy="scroll" data-target="#navbar-scrollspy" data-offset="0">
 
-	<!--Navigation, fixed at the top of page for ease of use.-->
+	<header>
 
-    	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-		<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
+		<!--Navigation, fixed at the top of page for ease of use.-->
 
-		<!--logo part of menu bar, for better site layout-->
+		<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+			<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
 
-		<a class="navbar-brand" href="#"></a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+			<!--logo part of menu bar, for better site layout-->
+
+			<a class="navbar-brand" href="#"></a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
-		<div class="collapse navbar-collapse" id="navbarNavDropdown">
-			<ul class="navbar-nav">
-				<li class="nav-item active">
-					<a class="nav-link" href="index.html">Somerset Trails<span class="sr-only">(current)</span></a>
-				</li>
+			<div class="collapse navbar-collapse" id="navbarNavDropdown">
+				<ul class="navbar-nav">
+					<li class="nav-item active">
+					<li class="nav-somerset">
+						<a class="nav-link" href="index.html"><strong>Somerset Trails</strong><span class="sr-only">(current)</span></a>
+					</li>
+					</li>
 
-				<!--Dropdown tab, all trails in one place for user accessibility-->
+					<!--Dropdown tab, all trails in one place for user accessibility-->
 
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						Top Trails
-					</a>
-					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-						<a class="dropdown-item" href="cheddar-gorge.html">Cheddar Gorge</a>
-						<a class="dropdown-item" href="cleeve-hill.html">Cleeve Hill</a>
-						<a class="dropdown-item" href="somerset-coastal.html">Somerset Coastal Path</a>
-                        <a class="dropdown-item" href="weston.html">Weston Woods</a>
-                        <a class="dropdown-item" href="blagdon.html">Blagdon Lake</a>
-					</div>
-				</li>
-			</ul>
-		</div>
-	</nav>
+					<li class="nav-item dropdown" id="nav-trail">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							Top Trails
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+							<a class="dropdown-item" href="cheddar-gorge.html">Cheddar Gorge</a>
+							<a class="dropdown-item" href="cleeve-hill.html">Cleeve Hill</a>
+							<a class="dropdown-item" href="somerset-coastal.html">Somerset Coastal Path</a>
+							<a class="dropdown-item" href="weston.html">Weston Woods</a>
+							<a class="dropdown-item" href="blagdon.html">Blagdon Lake</a>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</nav>
+	</header>
 
-    <!--cover picture-->
+	<!--cover picture-->
 
-<section class="coastal-banner">
+	<section class="coastal-banner">
 		<div id="banner-outer">
 			<div class="container">
 				<h6><strong>Explore the best trails one step at a time</strong></h6>
@@ -126,7 +131,7 @@
 			<button class="w3-button" onclick="plusDivs(1)">Next &#10095;</button>
 	</section>
 
-			<!--<section class="cheddar-map">
+	<!--<section class="cheddar-map">
     <div
 		<h2><strong>Cheddar gorge street view</strong></h2>
 		<iframe src="https://www.google.com/maps/embed/v1/streetview" key="AIzaSyDwkm-Zl_LpT63IFWXzmGhS8i6vZFf9dM8"
@@ -134,41 +139,41 @@
     </div>
 	</section>-->
 
-			<footer>
-				<div>
-					<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
-					<h5 href="index.html">Somerset Trails</h5>
-				</div>
-				<div>
-					<h5>Social Media</h5>
-				</div>
-				<link>
-				</link>
-				<link>
-				</link>
-			</footer>
+	<footer>
+		<div>
+			<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
+			<h5 href="index.html">Somerset Trails</h5>
+		</div>
+		<div>
+			<h5>Social Media</h5>
+		</div>
+		<link>
+		</link>
+		<link>
+		</link>
+	</footer>
 
-			<script>
-			</script>
+	<script>
+	</script>
 
-			<!--Scripts-->
+	<!--Scripts-->
 
-			<!--Jquery-->
-			<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+	<!--Jquery-->
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 
-			<!--Popper-->
-			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+	<!--Popper-->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 
-			<!--Bootstrap library-->
-			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+	<!--Bootstrap library-->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
-			<!--Maps JS-->
-			<script src="assets/js/maps.js"></script>
+	<!--Maps JS-->
+	<script src="assets/js/maps.js"></script>
 
-			<!--Google maps scripts-->
-			<script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
-			<script src="https://maps.googleapis.com/maps/api/js?key=........&callback=initMap">
-			</script>
+	<!--Google maps scripts-->
+	<script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=........&callback=initMap">
+	</script>
 
 </body>
 
