--- a/blagdon.html
+++ b/blagdon.html
@@ -32,34 +32,39 @@
 
 			<!--logo part of menu bar, for better site layout-->
 
-			<a class="navbar-brand" href="#"></a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+			<div class="collapse navbar-collapse mt-2" id="navbarResponsive">
+				<a class="navbar-brand" href="#"></a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
-			<div class="collapse navbar-collapse" id="navbarNavDropdown">
-				<ul class="navbar-nav">
-					<li class="nav-item active">
-                    <li class="nav-somerset">
-						<a class="nav-link" href="index.html"><strong>Somerset Trails</strong><span class="sr-only">(current)</span></a>
-					</li>
-					</li>
+				<div class="collapse navbar-collapse" id="navbarNavDropdown">
+					<ul class="navbar-nav">
+                    <li class="navbar-nav ml-auto skew">
+						<li class="nav-item active">
+						<li class="nav-somerset">
+							<a class="nav-link"
+								href="index.html"><strong>Somerset Trails</strong><span class="sr-only">(current)</span></a>
+						</li>
+						</li>
+                    </li>
 
-					<!--Dropdown tab, all trails in one place for user accessibility-->
+						<!--Dropdown tab, all trails in one place for user accessibility-->
 
-					<li class="nav-item dropdown" id="nav-trail">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Top Trails
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="cheddar-gorge.html">Cheddar Gorge</a>
-							<a class="dropdown-item" href="cleeve-hill.html">Cleeve Hill</a>
-							<a class="dropdown-item" href="somerset-coastal.html">Somerset Coastal Path</a>
-							<a class="dropdown-item" href="weston.html">Weston Woods</a>
-							<a class="dropdown-item" href="blagdon.html">Blagdon Lake</a>
-						</div>
-					</li>
-				</ul>
+						<li class="nav-item dropdown" id="nav-trail">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+								data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								Top Trails
+							</a>
+							<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+								<a class="dropdown-item" href="cheddar-gorge.html">Cheddar Gorge</a>
+								<a class="dropdown-item" href="cleeve-hill.html">Cleeve Hill</a>
+								<a class="dropdown-item" href="somerset-coastal.html">Somerset Coastal Path</a>
+								<a class="dropdown-item" href="weston.html">Weston Woods</a>
+								<a class="dropdown-item" href="blagdon.html">Blagdon Lake</a>
+							</div>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</nav>
 	</header>
