--- a/index.html
+++ b/index.html
@@ -23,49 +23,41 @@
 
 <body data-spy="scroll" data-target="#navbar-scrollspy" data-offset="0">
 
-	<header>
+	<!--Navigation, fixed at the top of page for ease of use-->
 
-		<!--Navigation, fixed at the top of page for ease of use-->
+	<nav class="navbar">
+    <div>
+		<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
+		<a href="index.html"><strong>Home</strong></a>
+		<a class="trail" href="#news">Trails</a>
+    </div>
+	</nav>
 
-		<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-			<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
 
-			<!--logo part of menu bar, for better site layout-->
+	<!--logo part of menu bar, for better site layout
 
-			<a class="navbar-brand" href="#"></a>
+		<div class="navbar" id="nav-trail">
+			<a class="navbar-brand" target="_self" href="#"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
-			<div class="collapse navbar-collapse" id="navbarNavDropdown">
-				<ul class="navbar-nav">
-					<li class="nav-item active">
-                    <li class="nav-somerset">
-						<a class="nav-link" href="index.html"><strong>Somerset Trails</strong><span class="sr-only">(current)</span></a>
-                    </li>
-					</li>
-
-					<!--Dropdown tab, all trails in one place for user accessibility-->
-
-					<li class="nav-item dropdown" id="nav-trail">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Top Trails
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="cheddar-gorge.html">Cheddar Gorge</a>
-							<a class="dropdown-item" href="cleeve-hill.html">Cleeve Hill</a>
-							<a class="dropdown-item" href="somerset-coastal.html">Somerset Coastal Path</a>
-							<a class="dropdown-item" href="weston.html">Weston Woods</a>
-							<a class="dropdown-item" href="blagdon.html">Blagdon Lake</a>
-						</div>
-					</li>
-				</ul>
-			</div>
-		</nav>
-	</header>
 
 
-	<!--Cover text and cover picture.-->
+				<div class="collapse navbar-collapse" id="navbarNavDropdown">
+					<ul class="navbar-nav">
+						<li class="navbar-nav ml-auto skew">
+						<li class="nav-item active">
+						<li class="nav-somerset">
+							<a class="nav-link"
+								href="index.html"><strong>Somerset Trails</strong><span class="sr-only">(current)</span></a>
+						</li>
+						</li>
+						</li>-->
+
+	<!--Dropdown tab, all trails in one place for user accessibility-->
+
+
+	<!--Cover text and cover picture.
 
 	<section class="banner">
 		<div id="banner-outer">
@@ -98,12 +90,12 @@
 
 	<br>
 
-	<!--Slideshow section -->
+	<!--Slideshow section-->
 
 
 
 
-	<!--Map section-->
+	<!--Map section
 
 	<section class="map">
 		<h2>Somerset Map</h2>
@@ -111,7 +103,7 @@
 	</section>
 
 
-	<!--Footer section-->
+	<!--Footer section
 
 	<footer>
 		<div>
@@ -121,10 +113,6 @@
 		<div>
 			<h5>Social Media</h5>
 		</div>
-		<link>
-		</link>
-		<link>
-		</link>
 	</footer>
 
 	<!--Scripts-->
@@ -133,10 +121,14 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 
 	<!--Popper-->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js">
+	</script>
 
 	<!--Bootstrap library-->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+    <!--Navigation bar JS-->
+    <script src="assets/js/nav.js"></script>
 
 	<!--Maps JS-->
 	<script src="assets/js/maps.js"></script>
@@ -145,7 +137,8 @@
 	<script src="assets/js/slide.js"></script>
 
 	<!--Google maps scripts-->
-	<script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
+	<script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js">
+	</script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=......&callback=initMap">
 	</script>
 
