--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!--WS3 Css-->
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <!--font awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!--bootstrap-->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 	<!--css-->
@@ -26,7 +28,7 @@
 	<!--Navigation, fixed at the top of page for ease of use-->
 
 	<nav class="topnav" id="myTopnav">
-		<a href="index.html" class="active">Home</a>
+    <a href="index.html" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
 		<div class="dropdown">
 			<button class="dropbtn">Trails
       <i class="fa fa-caret-down"></i>
