--- a/blagdon.html
+++ b/blagdon.html
@@ -21,53 +21,26 @@
 		rel="#">
 </head>
 
-<body data-spy="scroll" data-target="#navbar-scrollspy" data-offset="0">
-
-	<header>
+<body>
 
 		<!--Navigation, fixed at the top of page for ease of use.-->
 
-		<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-			<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
-
-			<!--logo part of menu bar, for better site layout-->
-
-			<div class="collapse navbar-collapse mt-2" id="navbarResponsive">
-				<a class="navbar-brand" href="#"></a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-    </button>
-				<div class="collapse navbar-collapse" id="navbarNavDropdown">
-					<ul class="navbar-nav">
-                    <li class="navbar-nav ml-auto skew">
-						<li class="nav-item active">
-						<li class="nav-somerset">
-							<a class="nav-link"
-								href="index.html"><strong>Somerset Trails</strong><span class="sr-only">(current)</span></a>
-						</li>
-						</li>
-                    </li>
-
-						<!--Dropdown tab, all trails in one place for user accessibility-->
-
-						<li class="nav-item dropdown" id="nav-trail">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-								data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-								Top Trails
-							</a>
-							<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-								<a class="dropdown-item" href="cheddar-gorge.html">Cheddar Gorge</a>
-								<a class="dropdown-item" href="cleeve-hill.html">Cleeve Hill</a>
-								<a class="dropdown-item" href="somerset-coastal.html">Somerset Coastal Path</a>
-								<a class="dropdown-item" href="weston.html">Weston Woods</a>
-								<a class="dropdown-item" href="blagdon.html">Blagdon Lake</a>
-							</div>
-						</li>
-					</ul>
-				</div>
+	<nav class="topnav">
+		<a href="index.html" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
+		<div class="dropdown">
+			<button class="dropbtn">Trails
+ <i class="fa fa-caret-down"></i>
+ </button>
+			<div class="dropdown-content">
+				<a href="cleeve-hill.html">Cleeve Hill</a>
+				<a href="cheddar-gorge.html">Cheddar Gorge</a>
+				<a href="blagdon.html">Blagdon Lake</a>
+				<a href="somerset-coastal.html">Somerset Coastal Path</a>
+				<a href="weston.html">Weston Woods</a>
 			</div>
-		</nav>
-	</header>
+		</div>
+		<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+	</nav>
 
 	<!--cover picture-->
 
